tests/base/parser/bad/stmts_t-send-cid-with.scilla
scilla_version 0

contract Test
()

transition arbitrary ()
  send Item there
end
